# internal/adapter/http/dto/auth_dto.go
@@ -20,5 +20,10 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
-	AccessToken string `json:"accessToken"`
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
+
+type RefreshRequest struct {
+	RefreshToken string `json:"refreshToken" binding:"required"`
 }
